css-library/neo/neo-scss/components/_switch.scss
// pending fix for text alignment issue

.neo-switch--multiline {
  height: auto !important;
  padding-left: 40px !important;
  left: -13px !important;

  @include rtl-selector {
    right: 0 !important;
    padding-right: 25px !important;
    padding-left: 0px !important;
  }

  .neo-switch__icon {
    left: 13px !important;
    &::after {
      left: 1px !important;
    }
  }

  &.neo-switch input {
    position: absolute;
  }
}
.neo-switch-children {
  height: auto !important;
  white-space: pre-line;
  float:left;
  margin-left: 16px;
  @include rtl-selector {
   float:right !important;
   margin-left: 0 !important;
   margin-right: 18px !important;
  }
}

// updated switch styles

@mixin switch-input {
  input {
    // display: none;
    opacity: 0;
  }
}

@mixin switch-icon {
  /* stylelint-disable-next-line selector-class-pattern */

  input:focus-visible {
    + .neo-switch__icon:before {
      // box-shadow: 0 0px 8px $radio-background-active-color;
      outline: 1px auto $radio-background-active-color;
      outline-offset: 2px;
    }
  }

  input + .neo-switch__icon {
    cursor: pointer;
    display: block;
    left: 0;
    // hard-coded to center switch
    top: 2px;
    position: absolute;

    @include rtl-selector {
      left: auto;
      right: 0;
    }

    &::before,
    &::after {
      border-radius: $switch-border-radius;
      content: "";
      position: absolute;
      transition: $switch-transition;
    }

    &::before {
      background-color: $switch-off-color;
      height: $switch-height;
      width: $switch-width;
    }

    &::after {
      background-color: $switch-ellipse-color;
      box-shadow: $switch-ellipse-box-shadow;
      height: $switch-knob-size;
      left: $switch-knob-indent-left;
      top: $switch-knob-indent-top;
      transform: translate(0, 0);
      width: $switch-knob-size;

      @include rtl-selector {
        left: auto;
        right: $switch-knob-indent-left;
      }
    }
  }
}

@mixin neo-switch--checked {
  /* stylelint-disable-next-line selector-class-pattern */
  input:checked + .neo-switch__icon {
    &::before {
      background-color: $switch-active-color;
    }

    &::after {
      transform: translate($switch-translate-distance, 0);

      @include rtl-selector {
        transform: translate(-$switch-translate-distance, 0);
      }
    }
  }

  input:checked ~ span.neo-switch-children {
    font-weight: $token-web-typography-fontweight-semibold;
  }
}

@mixin neo-switch--disabled {
  // &--disabled,
  // input:disabled + &__icon {
  //   cursor: not-allowed;
  //   opacity: $switch-disabled-opacity; //
  // }
  &--disabled,
  &--disabled input + &__icon {
    cursor: not-allowed;
  }

  &--disabled {
    color: $global-disabled-color; // should be disabled text color
  }

  &--disabled input:disabled + &__icon::before {
    background-color: $switch-disabled-off-background-color;
  }

  &--disabled input:checked:disabled + &__icon::before {
    background-color: $switch-disabled-on-background-color;
  }

  &:focus input:disabled + &__icon,
  &:focus input:checked + &__icon {
    &::before {
      box-shadow: none;
    }
  }
}

.neo-switch {
  @include NeoLinkStyles;
  display: inline-block;
  height: $switch-label-height;
  line-height: $body-line-height;
  min-width: $switch-width;
  // hard-coded for now
  // margin: 8px 0;
  // hard-coded for now
  // padding-left: $switch-width + $input-padding-x;
  padding-left: 27px;
  position: relative;
  color: $input-label-color;

  @include rtl-selector {
    padding-left: 0;
    padding-right: 27px;
  }
  &:focus-within {
    // outline: rgba(20, 115, 230, 1) auto 2px;
    // outline-offset: 2px;
  }

  &:focus-visible .neo-switch__icon {
    &::before {
      box-shadow: $token-shadows-elevation-100-x-offset
        $token-shadows-elevation-100-y-offset
        $token-shadows-elevation-100-radius $switch-elevation-color;
    }
  }

  @include switch-input;
  @include switch-icon;
  @include neo-switch--checked;
  @include neo-switch--disabled;
}

.neo-switch.neo-switch--multiline input+.neo-switch__icon:after {
  @include rtl-selector {
    right: 1px !important;
  }
}

